import changes from copied-in version in sc

--- a/src/sass/application.scss
+++ b/src/sass/application.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "custom-variables";
 @import "functions";
 @import "mixins";
 
@@ -51,3 +52,5 @@
 //
 
 @import "javascripts/sidebar-toggler";
+
+@import "custom";
