#3348: merge last changes from 4.0, untested

--- a/src/sass/application.scss
+++ b/src/sass/application.scss
@@ -30,6 +30,7 @@
 @import "components/calendar";
 @import "components/progress";
 @import "components/wiki";
+@import "components/collapsible-nav";
 @import "components/elements";
 @import "components/jquery-ui";
 @import "components/icons";
