#3348: add back link highlighting for wiki

--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -624,11 +624,11 @@ span.private {
 
   a {
 
-    &.user {
+    &[href*="/mitho-intern/wiki"] {
       color: shade($blue, 300);
     }
 
-    &.administration {
+    &.user {
       color: shade($blue, 300);
     }
 
