#3348: common language inside button

--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -279,7 +279,7 @@ span.private {
         }
 
         &::before {
-          content: "Login mit mitho®";
+          content: "Mit SSO einloggen";
           display: block;
           font-weight: $font-weight-bold;
           margin-bottom: 5px;
