fix button color

--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -289,7 +289,7 @@ span.private {
           display: block;
           width: 100%;
           padding: 6px 0;
-          border-left: 5px solid transparent;
+          border-left: 5px solid rgba(37, 0, 211, 0.09);
           background-image: url(../images/mitho-sso.png);
           background-repeat: no-repeat;
           background-position: left center;
